# iCommand

./: .gitignore  README.md  config.example.toml  pyproject.toml
icommand/: __init__.py  capture.py  cli.py  config.py  db.py  embeddings.py  hook.sh  llm.py  maintenance.py  search.py  tui.py  vector_index.py
scripts/: benchmark_perf.py  hook.sh
tests/: test_uninstall.py
